2008-09-18 Jens Tkotz <jens@peino.de> 1.5.10-svn-b1

 * Fix: Attempt to delete a subalbum via album commandbox failed.
        "delete_item.php not found".

        Thanks to Drrrl from Forum.

2008-09-16 Chris Kelly <ckdake@ckdake.com> 1.5.9

 * Release: 1.5.9 

2008-09-16 Jens Tkotz <jens@peino.de> 1.5.9-svn-b30

 * Fix: Little last minute fix ;-)
        Comment indication was enabled anytime on mainpage.

 * Fix: Some wordings.

   Thanks Julien.
   
2008-09-16 Jens Tkotz <jens@peino.de> 1.5.9-svn-b29

 * Manifest updates etc.

2008-09-16 Jens Tkotz <jens@peino.de> 1.5.9-svn-b28

 * SECURITY FIX: Arbitrary file disclosure
   
   A user having permissions to add photos to Gallery can retrieve arbitrary
   file (accessible to webserver) from the file system.
   The problem is caused by incorrect treatment of zipped symlinks.

   The Gallery team wants to thank Alex Ustinov for gently reporting this.


 * Security Fix: Insecure cookies over HTTPS

   When running gallery on https, it does not set cookies to be secure,
   making it possible to sniff the session cookie.

   The Gallery team wants to thank Hanno Boeck for reporting this.

2008-09-14 Jens Tkotz <jens@peino.de> 1.5.9-svn-b27

 * Fix: Add photos from mainpage is new, but was not working ;-)
        Added missing javascript.

2008-09-14 Jens Tkotz <jens@peino.de> 1.5.9-svn-b26

 * Fix: Typo

 * Change: Code nicify.

2008-09-13 Jens Tkotz <jens@peino.de> 1.5.9-svn-b25

 * Fix: Better handling the case when an invalid, or borken image
        was uploaded.

 * CHANGE: Album::getPerm now returns true anytime for admins.
           This is better then adding a check to every single permission
           check like introduced in 1.5.9-svn-b4           

 * CHANGE: Reverted to former 1.5.8 behaviour for album deletion.
           Owners can always delete their own albums.

 * Change: For better convinience,
           tell the user how much files are invalid in an archive.